# texmacs

./: .gitmodules  CMakeLists.txt  README.md  update-all
.github/workflows/: cmake.yml
TeXmacs/fonts/: font-database.scm
TeXmacs/progs/: init-texmacs-s7.scm
TeXmacs/progs-guile-c/: init-buffer.scm  init-texmacs.scm
TeXmacs/progs-guile-c/client/: client-menu.scm
TeXmacs/progs-guile-c/database/: db-menu.scm  db-widgets.scm
TeXmacs/progs-guile-c/doc/: apidoc-funcs.scm  docgrep.scm
TeXmacs/progs-guile-c/dynamic/: animate-menu.scm  fold-menu.scm  program-menu.scm  scripts-plot.scm  session-menu.scm
TeXmacs/progs-guile-c/education/: edu-menu.scm
TeXmacs/progs-guile-c/generic/: document-doc.scm  document-menu.scm  generic-menu.scm  pattern-tools.scm  search-widgets.scm  spell-widgets.scm
TeXmacs/progs-guile-c/graphics/: graphics-env.scm  graphics-menu.scm
TeXmacs/progs-guile-c/prog/: prog-menu.scm  scheme-tools.scm
TeXmacs/progs-guile-c/text/: text-menu.scm
TeXmacs/progs-s7/: init-texmacs.scm
TeXmacs/progs-s7/database/: bib-menu.scm  db-widgets.scm
TeXmacs/progs-s7/doc/: docgrep.scm  tmweb.scm
TeXmacs/progs-s7/dynamic/: session-menu.scm
TeXmacs/progs-s7/generic/: document-menu.scm  embedded-menu.scm  format-menu.scm  generic-menu.scm  pattern-selector.scm  search-widgets.scm
TeXmacs/progs-s7/math/: math-menu.scm
TeXmacs/progs-s7/source/: source-menu.scm
TeXmacs/progs-s7/table/: table-menu.scm
TeXmacs/progs/database/: db-menu.scm
TeXmacs/progs/doc/: tmdoc-menu.scm
TeXmacs/progs/dynamic/: fold-menu.scm  program-doc.scm  session-doc.scm
TeXmacs/progs/fonts/: fonts-truetype.scm
TeXmacs/progs/generic/: generic-doc.scm  insert-menu.scm
TeXmacs/progs/graphics/: graphics-env.scm  graphics-menu.scm
TeXmacs/progs/table/: table-doc.scm
TeXmacs/progs/various/: poster-menu.scm
TeXmacs/quickwidgets/: webview.qml
android/: AndroidManifest.xml
plugins/shell/src/: tm_shell.cpp
src/Data/: CMakeLists.txt
src/Data/Document/: new_document.cpp  new_style.cpp
src/Data/Drd/: drd_info.cpp  drd_std.cpp  tag_info.cpp
src/Data/History/: archiver.cpp  commute.cpp  patch.cpp
src/Data/Observers/: highlight_observer.cpp  tree_position.cpp
src/Data/String/: analyze.cpp  converter.cpp  fast_search.cpp  merge_sort.hpp
src/Data/Tree/: tree_analyze.cpp  tree_brackets.cpp  tree_cursor.cpp  tree_modify.cpp  tree_search.cpp  tree_spell.cpp  tree_traverse.cpp
src/Edit/: CMakeLists.txt  editor.hpp
src/Edit/Editor/: edit_main.cpp  edit_typeset.cpp
src/Edit/Interface/: edit_complete.cpp  edit_cursor.cpp  edit_graphics.cpp  edit_interface.cpp  edit_interface.hpp  edit_keyboard.cpp  edit_mouse.cpp  edit_repaint.cpp
src/Edit/Modify/: edit_delete.cpp  edit_math.cpp  edit_modify.cpp  edit_table.cpp  edit_text.cpp
src/Edit/Replace/: edit_search.cpp  edit_select.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/Bitmap_fonts/: glyph_analyze.cpp  glyph_distorted.cpp  glyph_ops.cpp  glyph_shrink.cpp  glyph_transforms.cpp  glyph_unserif.cpp
src/Graphics/Colors/: colors.cpp  true_color.cpp  true_color.hpp
src/Graphics/Fonts/: charmap.hpp  compound_font.cpp  font.cpp  math_font.cpp  (+13 more)
src/Gui/: Application.cpp  Application.hpp  CMakeLists.txt  DocumentWidget.cpp  DocumentWidget.hpp  DrawBoard.hpp  MainWindow.cpp  MainWindow.hpp  PixmapManager.hpp  ResourcesExtractor.cpp  ResourcesExtractor.hpp  ThingyTabInnerWindow.cpp  ThingyTabInnerWindow.hpp  WebBrowser.cpp  WelcomeWidget.hpp  main.cpp  resources.qrc.in
src/Kernel/: CMakeLists.txt
src/Plugins/: CMakeLists.txt
src/Plugins/Cairo/: cairo_renderer.cpp  tm_cairo.cpp
src/Plugins/Cocoa/: aqua_gui.mm
src/Plugins/Database/: database.cpp  db_disk.cpp  db_index.cpp  db_query.cpp
src/Plugins/Freetype/: free_type.cpp  rubber_assemble_font.cpp  rubber_stix_font.cpp  rubber_unicode_font.cpp  tt_analyze.cpp  tt_face.cpp  tt_file.hpp  tt_font.cpp  tt_tools.cpp  unicode_font.cpp  unicode_math_font.cpp
src/Plugins/Imlib2/: imlib2.cpp
src/Plugins/LaTeX_Preview/: latex_preview.cpp
src/Plugins/Metafont/: load_tex.cpp  tex_files.cpp  tex_files.hpp  tex_font.cpp  tex_rubber_font.cpp
src/Plugins/Qt/: QTMApplication.hpp  QTMGuiHelper.cpp  QTMMenuHelper.cpp  QTMMenuHelper.hpp  QTMPixmapOrImage.hpp  QTMPrintDialog.cpp  QTMPrintDialog.hpp  QTMPrinterSettings.cpp  QTMPrinterSettings.hpp  QTMScrollView.cpp  QTMSockets.cpp  QTMSockets.hpp  QTMStyle.cpp  QTMStyle.hpp  QTMTreeModel.cpp  QTMTreeModel.hpp  QTMWidget.cpp  QTMWidget.hpp  QTMWindow.cpp  QTMWindow.hpp  qt_chooser_widget.cpp  qt_color_picker_widget.cpp  qt_dialogues.cpp  qt_font.cpp  qt_gui.cpp  qt_gui.hpp  qt_picture.cpp  qt_pipe_link.cpp  qt_renderer.cpp  qt_renderer.hpp  qt_simple_widget.cpp  qt_simple_widget.hpp  qt_sys_utils.cpp  qt_tm_widget.cpp  qt_tm_widget.hpp  qt_ui_element.cpp  qt_ui_element.hpp  qt_utilities.cpp  qt_utilities.hpp  qt_widget.cpp  (+2 more)
src/Plugins/Sqlite3/: sqlite3.cpp
src/Plugins/Unix/: unix_sys_utils.cpp
src/Plugins/Updater/: tm_updater.cpp
src/Plugins/Widkit/Button/: popup_button.cpp
src/Plugins/Windows/: iostream.cpp  mingw_sys_utils.cpp  spawn.cpp  spawn.hpp  win-utf8-compat.hpp
src/Plugins/X11/: x_gui.cpp
src/Scheme/: CMakeLists.txt  README.md  abstract_scheme.cpp  abstract_scheme.hpp  glue.cpp  object.hpp  promise_widget.hpp  scheme.cpp  scheme.hpp  scheme_config.cmake.hpp  tmscm.hpp
src/Scheme/Glue/: glue.hpp  glue_basic.cpp  glue_editor.cpp  glue_server.cpp
src/Scheme/Guile18/: guile18_scheme.cpp  guile18_scheme.hpp  guile18_tmscm.cpp  guile18_tmscm.hpp  guile_thread.cpp  guile_thread.hpp
src/Scheme/Guile3/: scheme.cpp  scheme.hpp  tmscm.hpp
src/Scheme/Scheme/: glue.cpp
src/Scheme/s7/: s7_tmscheme.cpp  s7_tmscheme.hpp  s7_tmscm.cpp  s7_tmscm.hpp  scheme.cpp  scheme.hpp  tmscm.hpp
src/Style/: CMakeLists.txt
src/System/: CMakeLists.txt  config.h.cmake  config.in  tm_config.h.cmake  tm_configure.hpp.cmake  tm_configure.in
src/Texmacs/: CMakeLists.txt  server.hpp  tm_server.hpp
src/Typeset/: CMakeLists.txt
src/Utils/: ArgsParser.hpp  CMakeLists.txt  PlatformDependant.hpp  ThreadSafeQueue.hpp  Utils.hpp
(+247 files in other folders)
